# reticle

./: .gitignore  Cargo.toml  Makefile  README.md
.buildkite/: pipeline.yaml
.github/workflows/: build.yaml  ci.yml
ci/: ci_compiler.sh  ci_interpreter.sh  ci_lint.sh  ci_vivado.sh  conftest.py  fsm.v  new.sh  register.v  run.py  run.sh  test_add_i8_i8_i8.v  test_add_i8v4_i8v4_i8v4.v  test_add_mul_i8_i8_i8_i8.v  test_add_reg_mul_i8_i8_i8_b_i8.v  test_and_b_b_b.v  test_and_i8_i8_i8.v  test_const_i8.v  test_dsp_add_i8_i8_i8.v  test_dsp_and_i8_i8_i8.v  test_dsp_or_i8_i8_i8.v  test_dsp_sub_i8_i8_i8.v  test_eq_b_b_b.v  test_eq_b_i8_i8.v  test_fsm.v  test_id_b_b.v  test_id_i8_i8.v  test_lut_add_i8_i8_i8.v  test_lut_and_i8_i8_i8.v  test_lut_or_i8_i8_i8.v  test_lut_sub_i8_i8_i8.v  test_mul_i8_i8_i8.v  test_muladd.v  test_mux_b_b_b_b.v  test_mux_i8_b_i8_i8.v  test_nand_b_b_b.v  test_nand_i8_i8_i8.v  test_neq_b_b_b.v  test_neq_b_i8_i8.v  test_nor_b_b_b.v  test_nor_i8_i8_i8.v  (+18 more)
ci/tests/: files.tcl  test_add_i8_i8_i8.v  test_add_i8v4_i8v4_i8v4.v  test_add_mul_i8_i8_i8_i8.v  test_add_reg_mul_i8_i8_i8_b_i8.v  test_all.v  test_and_b_b_b.v  test_and_i8_i8_i8.v  test_const_i8.v  test_dot.v  test_dsp_add_i8_i8_i8.v  test_dsp_and_i8_i8_i8.v  test_dsp_or_i8_i8_i8.v  test_dsp_sub_i8_i8_i8.v  test_eq_b_b_b.v  test_eq_b_i8_i8.v  test_fsm.v  test_id_b_b.v  test_id_i8_i8.v  test_lut_add_i8_i8_i8.v  test_lut_and_i8_i8_i8.v  test_lut_or_i8_i8_i8.v  test_lut_sub_i8_i8_i8.v  test_mul_i8_i8_i8.v  test_mux_b_b_b_b.v  test_mux_i8_b_i8_i8.v  test_nand_b_b_b.v  test_nand_i8_i8_i8.v  test_neq_b_b_b.v  test_neq_b_i8_i8.v  test_nor_b_b_b.v  test_nor_i8_i8_i8.v  test_not_b_b.v  test_not_i8_i8.v  test_or_b_b_b.v  test_or_i8_i8_i8.v  test_pipeline.v  test_reg_i8_i8_b.v  test_sub_i8_i8_i8.v  test_sub_i8v4_i8v4_i8v4.v  (+5 more)
demo/: run.sh  test_fsm.v  test_register.v
docker/: Dockerfile.credential  Dockerfile.reticle  Dockerfile.rust  Dockerfile.vivado  README.md  auth.sh  build.sh  credential.sh  get_vivado_credential.sh  install.sh  install_rust.sh  install_vivado.sh
examples/: add.json  add.rml  add.xl  add_pipe.ir  add_reg.ir  dot_systolic.json  dsp_muladd_reg.xl  fsm.ir  lut_add_reg.xl  lut_i8_add_ro.rasm  lut_reg.xl  muladd.ret  prog.ret  tadd.xl  tadd_pipeline.xl  ultrascale.tdl  ultrascale.xdl  ultrascale_lut.tdl  vadd.xml
examples/asm/: addreduce_placed.asm  dot.rasm  example.rasm  fsm.asm  fsm_3.asm  fsm_5.asm  fsm_7.asm  fsm_9.asm  id.rasm  lut_add.asm  mux128.asm  tadd.asm  tadd.rasm  tadd_128.asm  tadd_256.asm  tadd_512.asm  tadd_64.asm  tdot.asm  tdot_5_18.asm  tdot_5_3.asm  tdot_5_36.asm  tdot_5_3_opt.asm  tdot_5_9.asm  tdot_cascade.asm  tdot_opt.asm  vadd_pipeline.rasm
examples/basic/: add_pair.ret  dot.ret  fanout.ret  fsm.ret  fsm_two.ret  muladd.ret  pipeline.ret  two_add.ret  vadd_const.ret  vadd_one.ret
examples/behav/: lut_add.v
examples/eval/: fsm_7.ir  fsm_9.ir  tadd_128.ir  tadd_256.ir  tadd_512.ir  tadd_64.ir  tdot_5_18.ir  tdot_5_9.ir
examples/ir/: addreduce.ir  aes_encrypt.ir  fsm_3.ir  fsm_5.ir  lut_add.ir  mux128.ir  rom_8x256.ir  rom_8x8.ir  srom_8x256.ir  tadd.ir  tdot.ir  tdot_5_36.ir
examples/isa/: add.ret  and.ret  const.ret  eq.ret  gt.ret  identity.ret  mul.ret  nor.ret  or.ret  reg.ret  sub.ret  xor.ret
examples/microbench/: dsp_add_i8_r1.ret  dsp_add_i8v4_r0_r0_r0.ret  dsp_add_i8v4_r0_r0_r1.ret  dsp_add_i8v4_r1_r1_r1.ret  lut_add_i8_r0.ret  lut_add_i8_r1.ret  lut_and_i8_r1.ret  lut_not_bool_r0.ret  lut_not_i8_r0.ret  lut_not_i8_r1.ret  vector_add.py  vector_add.ret
examples/mmap/: aes.json  brom_8x256.json
examples/pat/: dsp.pat  lut.pat  mem.pat
examples/struct/: add.v  addreduce_placed.v  brom_8x256.v  brom_8x256_mmap.v  fsm_3.v  fsm_5.v  fsm_7.v  fsm_9.v  lrom_8x8.v  mux128.v  tadd.v  tadd_128.v  tadd_256.v  tadd_512.v  tadd_64.v  tdot.v  tdot_5_18.v  tdot_5_3.v  tdot_5_36.v  tdot_5_9.v
examples/xim/: dsp.xim  lut.xim  mem.xim
examples/xir/: add.xir  addreduce_placed.xir  brom_8x256.xir  fsm_3.xir  fsm_5.xir  fsm_7.xir  fsm_9.xir  lrom_8x8.xir  lut_add.xir  mux128.xir  tadd.xir  (+9 more)
layout/: place.py  vadd.txt  xczu3eg-sbva484.csv
src/: lib.rs  main.rs  mod.rs  tests.rs
src/langs/asm/: Cargo.toml
src/langs/asm/src/: ast.rs  default.rs  display.rs  errors.rs  from.rs  from_str.rs  helpers.rs  lib.rs  parser.rs  pretty_print.rs  syntax.pest
src/langs/asm/tests/: parser.rs
src/langs/edif/: .gitignore  Cargo.toml  README.md  xilinx_multiplier.edf
src/langs/edif/examples/: Makefile  do_all.sh  load_edif.tcl  xilinx_inverter.rs  xilinx_multiplier.rs
src/langs/edif/src/: lib.rs  main.rs  string_helpers.rs  xilinx_multiplier.edf
src/langs/edif/src/edifier/: Cargo.toml
src/langs/edif/src/edifier/src/: ast.rs  helpers.rs  main.rs  serialize.rs
src/langs/edif/src/edifier/tests/: string_helpers_ut.rs  unit_tests.rs
src/langs/edif/tests/: string_helpers_ut.rs  unit_tests.rs
src/langs/xim/: Cargo.toml
src/langs/xim/src/: ast.rs  default.rs  display.rs  errors.rs  helpers.rs  infer.rs  lib.rs  parser.rs  pretty_print.rs  syntax.pest
src/langs/xim/tests/: parser.rs
src/tools/assembler/: Cargo.toml  build.rs
src/tools/assembler/src/: errors.rs  lib.rs
src/tools/bler/: Cargo.toml  build.rs
src/tools/bler/src/: errors.rs  lib.rs
src/tools/bler/tests/: assemble.rs
src/tools/isel/: Cargo.toml  build.rs
src/tools/isel/src/: errors.rs  lib.rs  tree.rs
src/tools/isel/src/tree/: default.rs  display.rs  from.rs  helpers.rs  mod.rs  try_from.rs
src/tools/isel/tests/: select.rs
src/tools/mmap/: Cargo.toml
src/tools/mmap/src/: lib.rs
src/tools/mmap/tests/: mmap.rs
src/tools/translate/: Cargo.toml
src/tools/translate/src/: driver.rs  errors.rs  lib.rs  opt.rs
src/tools/xpand/: Cargo.toml
src/tools/xpand/src/: bram.rs  carry.rs  cat.rs  decl.rs  display.rs  dsp.rs  errors.rs  expr.rs  ext.rs  fdre.rs  fdse.rs  gnd.rs  id.rs  instance.rs  lib.rs  loc.rs  lram.rs  lut.rs  main.rs  param.rs  port.rs  ramb.rs  to_verilog.rs  vcc.rs
src/tools/xpand/tests/: prim.rs  prim_inst.rs  primitive.rs  xpand.rs
tests/: basic.rs  isa.rs
(+605 files in other folders)
