[package]
name = "reticle"
version = "0.1.0"
authors = ["Luis Vega <vegaluis@cs.washington.edu>"]
edition = "2018"

[dependencies]
pretty = "0.10.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
petgraph = "0.5.1"
rand = "0.8.2"
regex = "1.3.9"
pest = "2.0"
pest_derive = "2.0"
pest_consume = "1.0.5"
vast = { git = "https://github.com/vegaluisjose/vast.git", rev = "9238cf93e66701787370f848995004ac884ae2a7" }
structopt = { version = "0.3", default-features = false }
itertools = "0.9.0"
lazy_static = "1.4.0"

[[bin]]
name = "reticle-translate"
path = "src/bin/translate.rs"

# [[bin]]
# name = "reticle-opt"
# path = "src/bin/opt.rs"
