[package]
name = "reticle"
version = "0.1.0"
authors = ["Luis Vega <vegaluisjose@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
pretty = "0.10.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
petgraph = "0.5.1"
rand = "0.8.2"
regex = "1.3.9"
pest = "2.0"
pest_derive = "2.0"
pest_consume = "1.0.5"
vast = { git = "https://github.com/vegaluisjose/vast.git", rev = "9238cf93e66701787370f848995004ac884ae2a7" }
structopt = { version = "0.3", default-features = false }
itertools = "0.9.0"
lazy_static = "1.4.0"
bincode = "1.3.1"
ir = { path = "src/langs/ir"}
asm = { path = "src/langs/asm" }
pat = { path = "src/langs/pat"}
xim = { path = "src/langs/xim"}
xir = { path = "src/langs/xir"}
isel = { path = "src/tools/isel" }
translate = { path = "src/tools/translate" }
optimizer = { path = "src/tools/optimizer" }

[[bin]]
name = "reticle-translate"
path = "src/bin/translate.rs"

[[bin]]
name = "reticle-optimize"
path = "src/bin/optimize.rs"

[[bin]]
name = "reticle-place"
path = "src/bin/place.rs"

[[bin]]
name = "rt"
path = "src/bin/rt.rs"

[[bin]]
name = "ro"
path = "src/bin/ro.rs"

[workspace]
members = [
  "src/langs/ir",
  "src/langs/pat",
  "src/langs/asm",
  "src/langs/xir",
  "src/langs/xim",
  "src/tools/io",
  "src/tools/prettyprint",
  "src/tools/isel",
  "src/tools/translate",
  "src/tools/optimizer",
]

exclude = ["ci", "dev", "docker"]
