[package]
name = "reticle"
version = "0.1.0"
authors = ["The Reticle developers"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
ir = { path = "src/langs/ir"}
asm = { path = "src/langs/asm" }
pat = { path = "src/langs/pat"}
xim = { path = "src/langs/xim"}
xir = { path = "src/langs/xir"}
isel = { path = "src/tools/isel" }
translate = { path = "src/tools/translate" }
optimizer = { path = "src/tools/optimizer" }

[[bin]]
name = "rt"
path = "src/bin/rt.rs"

[[bin]]
name = "ro"
path = "src/bin/ro.rs"

[workspace]
members = [
  "src/langs/ir",
  "src/langs/pat",
  "src/langs/asm",
  "src/langs/xir",
  "src/langs/xim",
  "src/langs/verilog",
  "src/tools/io",
  "src/tools/prettyprint",
  "src/tools/isel",
  "src/tools/translate",
  "src/tools/optimizer",
  "src/tools/bler",
  "src/tools/bline",
  "src/tools/xpand",
]

exclude = ["ci", "dev", "docker"]
