[package]
name = "asm"
version = "0.1.0"
authors = ["The Reticle developers"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
pest = "2.0"
pest_derive = "2.0"
pest_consume = "1.0.5"
ir = { path = "../ir" }
prettyprint = { path = "../../tools/prettyprint" }
io = { path = "../../tools/io" }
