[package]
name = "edifier_top"
version = "0.1.0"
authors = ["Pedro Torruella <ptorru14@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edifier = { path = "src/edifier" }
platforms = { path = "src/platforms" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_sexpr = "0.1.0"

[workspace]
members = [
    "src/edifier",
    "src/platforms",
]

exclude = ["others"]