[package]
name = "xim"
version = "0.1.0"
authors = ["Luis Vega <vegaluisjose@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
itertools = "0.9.0"
pest = "2.0"
pest_derive = "2.0"
pest_consume = "1.0.5"
prettyprint = { path = "../../tools/prettyprint" }
io = { path = "../../tools/io" }
xir = { path = "../xir" }
