[package]
name = "isel"
version = "0.1.0"
authors = ["Luis Vega <vegaluisjose@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[build-dependencies]
pat = { path = "../../langs/pat" }
xim = { path = "../../langs/xim" }

[dependencies]
ir = { path = "../../langs/ir" }
asm = { path = "../../langs/asm" }
pat = { path = "../../langs/pat" }
