[package]
name = "mmap"
version = "0.1.0"
authors = ["The Reticle developers"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
io = { path = "../io" }
derive_more = { version = "0.99.0", features = ["deref", "deref_mut"] }
