[package]
name = "translate"
version = "0.1.0"
authors = ["The Reticle developers"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
ir = { path = "../../langs/ir" }
asm = { path = "../../langs/asm" }
xir = { path = "../../langs/xir" }
isel = { path = "../isel" }
bler = { path = "../bler" }
bline = { path = "../bline" }
xpand = { path = "../xpand" }
io = { path = "../io" }
