[package]
name = "xpand"
version = "0.1.0"
authors = ["Luis Vega <vegaluisjose@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
itertools = "0.9.0"
ir = { path = "../../langs/ir" }
xir = { path = "../../langs/xir" }
verilog = { path = "../../langs/verilog" }
io = { path = "../io" }
