[package]
name = "xpand"
version = "0.1.0"
authors = ["The Reticle developers"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
itertools = "0.9.0"
ir = { path = "../../langs/ir" }
xir = { path = "../../langs/xir" }
verilog = { path = "../../langs/verilog" }
io = { path = "../io" }
bline = { path = "../bline" }
prim = { path = "../prim" }
derive_more = { version = "0.99.0", features = ["from", "deref", "deref_mut"] }
pretty_assertions = "0.7.2"
