[package]
name = "edifier"
version = "0.1.0"
authors = ["Pedro Torruella <ptorru14@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_sexpr = "0.1.0"
expect-test = "1.0.2"
derive_more = { version = "0.99.14" , features = ["from"] }